# IMAC_S4_title_sequence

./: Cargo.toml
shaders/: bezier.fs.glsl  bezier.vs.glsl  tri.fs.glsl  tri.vs.glsl
src/: ez_files.rs  generator.rs  main.rs  utils.rs
src/geometry/: basics.rs  bezier.rs  draw.rs  mod.rs
src/open_gl/: stupid.rs
