[package]
name = "imac2_title_sequence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.25.0", features = ["rayon"]}
rayon = "1.9.0"

glutin = "0.30.6"
raw-window-handle = "0.5.0"
glutin-winit = "0.3.0"
gl = "0.14.0"
winit = "0.28.1"
